--- a/assets/scss/theme_colors.scss
+++ b/assets/scss/theme_colors.scss
@@ -7,11 +7,14 @@
   --danger-: #b60c0c;
   --red-: #eb5f5f;
   --gray-: #9e9393;
-  --dark-: #202020;
+  --dark-: #303030;
   --white-: #fff;
 
-  --dark-bg-: #101010;
+  --dark-bg-: #252525;
   --light-bg-: #f5eeee;
+
+  --chat-dark-: #25252525;
+  --chat-light-: #e9e5e5;
 
   --base-card-dark-bg-: #252525;
   --base-card-light-bg-: #e9e2e2;
