--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -4,9 +4,10 @@
 @import url("./font_weight.scss");
 @import url("./animations.scss");
 @import url("./border.scss");
+@import url("./fonts.scss");
 
 * {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "app";
   margin: 0;
   padding: 0;
 }
