--- a/assets/scss/theme_colors.scss
+++ b/assets/scss/theme_colors.scss
@@ -1,7 +1,7 @@
 :root {
   --primary-: #7d7be5;
   --secondary-: #114477;
-  --success-: #7eed1c;
+  --success-: #078f2b;
   --info-: #bfecff;
   --warning-: #fff100;
   --danger-: #b60c0c;
