--- a/assets/scss/theme_colors.scss
+++ b/assets/scss/theme_colors.scss
@@ -3,7 +3,7 @@
   --secondary-: #114477;
   --success-: #078f2b;
   --info-: #bfecff;
-  --warning-: #fff100;
+  --warning-: #FFE100;
   --danger-: #b60c0c;
   --red-: #eb5f5f;
   --gray-: #9e9393;
