--- a/assets/scss/theme_colors.scss
+++ b/assets/scss/theme_colors.scss
@@ -5,7 +5,7 @@
   --info-: #bfecff;
   --warning-: #FFE100;
   --danger-: #b60c0c;
-  --red-: #eb5f5f;
+  --red-: #E62727;
   --gray-: #9e9393;
   --dark-: #303030;
   --white-: #fff;
