--- a/assets/scss/theme_colors.scss
+++ b/assets/scss/theme_colors.scss
@@ -4,7 +4,7 @@
   --success-: #078f2b;
   --info-: #bfecff;
   --warning-: #FFE100;
-  --danger-: #b60c0c;
+  --danger-: #B12C00;
   --red-: #E62727;
   --gray-: #9e9393;
   --dark-: #303030;
