--- a/assets/scss/background.scss
+++ b/assets/scss/background.scss
@@ -1,55 +1,84 @@
 @import url("./theme_colors.scss");
 
+.btn-primary {
+  color: var(--white-);
+  transition: 0.5s;
+  background: #e1e9fa;
+  background: linear-gradient(90deg, rgba(225, 233, 250, 1) 0%, rgba(125, 123, 229, 1) 100%);
+}
+.btn-secondary {
+  color: var(--white-);
+  transition: 0.5s;
+  background: #8bbae8;
+  background: linear-gradient(90deg, rgba(139, 186, 232, 1) 0%, rgba(17, 68, 119, 1) 58%);
+}
+.btn-success {
+  color: var(--dark-);
+  transition: 0.5s;
+  background: #60eb85;
+  background: linear-gradient(90deg, rgba(96, 235, 133, 1) 0%, rgba(7, 143, 43, 1) 58%);
+}
+
 .bg-primary {
   background: var(--primary-);
   color: var(--white-);
   transition: 0.5s;
 }
+
 .bg-secondary {
   background: var(--secondary-);
   color: var(--white-);
   transition: 0.5s;
 }
+
 .bg-success {
   background: var(--success-);
   color: var(--dark-);
   transition: 0.5s;
 }
+
 .bg-info {
   background: var(--info-);
   color: var(--white-);
   transition: 0.5s;
 }
+
 .bg-warning {
   background: var(--warning-);
   color: var(--dark-);
   transition: 0.5s;
 }
+
 .bg-danger {
   background: var(--danger-);
   color: var(--white-);
   transition: 0.5s;
 }
+
 .bg-red {
   background: var(--red-);
   color: var(--white-);
   transition: 0.5s;
 }
+
 .bg-gray {
   background: var(--gray-);
   color: var(--dark-);
   transition: 0.5s;
 }
+
 .bg-dark {
   background: var(--dark-);
   color: var(--white-);
   transition: 0.5s;
 }
+
 .bg-white {
   background: var(--white-);
   color: var(--dark-);
   transition: 0.5s;
 }
+
 .bg-none {
   background: none;
 }
@@ -60,11 +89,13 @@
   color: var(--white-);
   transition: 0.5s;
 }
+
 .bg-app-light {
   background: var(--light-bg-);
   color: var(--dark-);
   transition: 0.5s;
 }
+
 // ** Application theme class ** //
 
 // ** Application base card theme class ** //
@@ -73,9 +104,11 @@
   color: var(--white-);
   transition: 0.5s;
 }
+
 .base-card-light {
   background: var(--base-card-light-bg-);
   color: var(--dark-);
   transition: 0.5s;
 }
+
 // ** Application base card theme class ** //
