--- a/assets/scss/background.scss
+++ b/assets/scss/background.scss
@@ -3,8 +3,8 @@
 .btn-primary {
   color: var(--white-);
   transition: 0.5s;
-  background: #e1e9fa;
-  background: linear-gradient(90deg, rgba(225, 233, 250, 1) 0%, rgba(125, 123, 229, 1) 100%);
+  background: #FFF;
+  background: linear-gradient(62deg, rgba(255, 255, 255, 1) 0%, rgba(125, 123, 229, 1) 30%);
 }
 .btn-secondary {
   color: var(--white-);
