--- a/assets/scss/theme_colors.scss
+++ b/assets/scss/theme_colors.scss
@@ -11,11 +11,11 @@
   --white-: #fff;
 
   --dark-bg-: #252525;
-  --light-bg-: #f5eeee;
+  --light-bg-: #fafafa;
 
   --chat-dark-: #25252525;
   --chat-light-: #e9e5e5;
 
   --base-card-dark-bg-: #303030;
-  --base-card-light-bg-: #e9e2e2;
+  --base-card-light-bg-: #f8f8f8;
 }
