--- a/assets/scss/background.scss
+++ b/assets/scss/background.scss
@@ -1,18 +1,18 @@
 @import url("./theme_colors.scss");
 
-.btn-primary {
+.bg-primary-gr  {
   color: var(--white-);
   transition: 0.5s;
   background: #aeacf2;
   background: linear-gradient(62deg, rgba(174, 172, 242, 0.55) 0%, rgba(125, 123, 229, 1) 30%);
 }
-.btn-secondary {
+.bg-secondary-gr {
   color: var(--white-);
   transition: 0.5s;
   background: #114477;
   background: linear-gradient(62deg, rgba(17, 68, 119, 0.55) 0%, rgba(17, 68, 119, 1) 30%);
 }
-.btn-success {
+.bg-success-gr {
   color: var(--dark-);
   transition: 0.5s;
   background: #078F2B;
