Update category cardf

--- a/assets/scss/theme_colors.scss
+++ b/assets/scss/theme_colors.scss
@@ -1,7 +1,8 @@
 :root {
   --primary-: #7d7be5;
   --secondary-: #114477;
-  --success-: #078f2b;
+  --success-: #1cf856;
+   --success-100: #1f7c35;
   --info-: #bfecff;
   --warning-: #FFE100;
   --danger-: #B12C00;
