--- a/assets/scss/theme_colors.scss
+++ b/assets/scss/theme_colors.scss
@@ -1,14 +1,32 @@
 :root {
-  --primary-: #7d7be5;
-  --secondary-: #114477;
-  --success-: #1cf856;
-   --success-100: #1f7c35;
-  --info-: #bfecff;
-  --warning-: #FFE100;
-  --danger-: #B12C00;
-  --red-: #E62727;
-  --gray-: #9e9393;
+  // primary colors
+  --primary1-: #59AC77;
+  --primary2-: #FDAAAA;
+  --primary3-: #FFD5D5;
+  --primary4-: #3A6F43;
+
+  // secondary colors
+  --secondary1-: #00A9FF;
+  --secondary2-: #89CFF3;
+  --secondary3-: #A0E9FF;
+  --secondary4-: #CDF5FD;
+
+  // warning colors
+  --warning1-: #EBF400;
+  --warning2-: #FFF78A;
+
+  // gray colors
+  --gray1-: #B3C8CF;
+  --gray2-: #E5E1DA;
+  --gray3-: #F1F0E8;
+
+  // danger colors
+  --danger1-: #8A0000;
+  --danger2-: #E4004B;
+  --danger3-: #E62727;
+
   --dark-: #303030;
+  
   --white-: #fff;
 
   --dark-bg-: #252525;
