--- a/assets/scss/colors.scss
+++ b/assets/scss/colors.scss
@@ -1,32 +1,62 @@
 @import url("./theme_colors.scss");
 
-.color-primary {
-  color: var(--primary-);
+.color-primary-1 {
+  color: var(--primary1-);
 }
-.color-secondary {
-  color: var(--secondary-);
+.color-primary-2 {
+  color: var(--primary2-);
 }
-.color-success {
-  color: var(--success-);
+.color-primary-3 {
+  color: var(--primary3-);
 }
-.color-info {
-  color: var(--info-);
+.color-primary-4 {
+  color: var(--primary4-);
 }
-.color-warning {
-  color: var(--warning-);
+
+.color-secondary-1 {
+  color: var(--secondary1-);
 }
-.color-danger {
-  color: var(--danger-);
+.color-secondary-2 {
+  color: var(--secondary2-);
 }
-.color-red {
-  color: var(--red-);
+.color-secondary-3 {
+  color: var(--secondary3-);
 }
-.color-gray {
-  color: var(--gray-);
+.color-secondary-4 {
+  color: var(--secondary4-);
 }
+
+.color-warning-1 {
+  color: var(--warning1-);
+}
+.color-warning-2 {
+  color: var(--warning2-);
+}
+
+.color-gray-1 {
+  color: var(--gray1-);
+}
+.color-gray-2 {
+  color: var(--gray2-);
+}
+.color-gray-3 {
+  color: var(--gray3-);
+}
+
+.color-danger-1 {
+  color: var(--danger1-);
+}
+.color-danger-2 {
+  color: var(--danger2-);
+}
+.color-danger-3 {
+  color: var(--danger3-);
+}
+
 .color-dark {
   color: var(--dark-);
 }
+
 .color-white {
   color: var(--white-);
 }
