--- a/assets/scss/background.scss
+++ b/assets/scss/background.scss
@@ -1,5 +1,5 @@
 @import url("./theme_colors.scss");
-
+// gr background
 .bg-primary-gr  {
   color: var(--white-);
   transition: 0.5s;
@@ -13,6 +13,7 @@
   background: linear-gradient(130deg, rgba(0, 169, 255, 0.99) 0%, rgba(137, 207, 243, 1) 61%, rgba(160, 233, 255, 1) 100%);
 }
 
+// primary background
 .bg-primary-1 {
   background: var(--primary1-);
   color: var(--white-);
@@ -34,6 +35,7 @@
   transition: 0.5s;
 }
 
+// secondary background
 .bg-secondary-1 {
   background: var(--secondary1-);
   color: var(--white-);
@@ -55,6 +57,7 @@
   transition: 0.5s;
 }
 
+// background warning
 .bg-warning-1 {
   background: var(--warning1-);
   color: var(--dark-);
@@ -66,6 +69,7 @@
   transition: 0.5s;
 }
 
+// gray background
 .bg-gray-1 {
   background: var(--gray1-);
   color: var(--dark-);
@@ -82,6 +86,7 @@
   transition: 0.5s;
 }
 
+// danger background
 .bg-danger-1 {
   background: var(--danger1-);
   color: var(--white-);
