--- a/assets/scss/background.scss
+++ b/assets/scss/background.scss
@@ -57,7 +57,7 @@
   transition: 0.5s;
 }
 
-// background warning
+// warning background 
 .bg-warning-1 {
   background: var(--warning1-);
   color: var(--dark-);
