--- a/assets/scss/colors.scss
+++ b/assets/scss/colors.scss
@@ -1,5 +1,6 @@
 @import url("./theme_colors.scss");
 
+// primary colors
 .color-primary-1 {
   color: var(--primary1-);
 }
@@ -13,6 +14,7 @@
   color: var(--primary4-);
 }
 
+// secondary colors
 .color-secondary-1 {
   color: var(--secondary1-);
 }
@@ -26,6 +28,7 @@
   color: var(--secondary4-);
 }
 
+// warning colors
 .color-warning-1 {
   color: var(--warning1-);
 }
@@ -33,6 +36,7 @@
   color: var(--warning2-);
 }
 
+// gray colors
 .color-gray-1 {
   color: var(--gray1-);
 }
@@ -43,6 +47,7 @@
   color: var(--gray3-);
 }
 
+// danger colors
 .color-danger-1 {
   color: var(--danger1-);
 }
