--- a/assets/scss/colors.scss
+++ b/assets/scss/colors.scss
@@ -58,8 +58,14 @@
   color: var(--danger3-);
 }
 
-.color-dark {
-  color: var(--dark-);
+.color-dark-1 {
+  color: var(--dark1-);
+}
+.color-dark-2 {
+  color: var(--dark2-);
+}
+.color-dark-3 {
+  color: var(--dark3-);
 }
 
 .color-white {
