--- a/assets/scss/theme_colors.scss
+++ b/assets/scss/theme_colors.scss
@@ -25,12 +25,15 @@
   --danger2-: #E4004B;
   --danger3-: #E62727;
 
-  --dark-: #303030;
-  
+  // dark colors
+  --dark1-: #19183B;
+  --dark2-: #1C352D;
+  --dark3-: #030303;
+
   --white-: #fff;
 
-  --dark-bg-: #252525;
-  --light-bg-: #fafafa;
+  --dark-bg-: #1A2130;
+  --light-bg-: #FAF6F0;
 
   --chat-dark-: #25252525;
   --chat-light-: #e9e5e5;
