--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,7 +5,7 @@
 @import url("./animations.scss");
 @import url("./border.scss");
 @import url("./fonts.scss");
-
+@import url("./transitions.scss");
 * {
   font-family: "app";
   margin: 0;
