--- a/assets/scss/theme_colors.scss
+++ b/assets/scss/theme_colors.scss
@@ -38,6 +38,6 @@
   --chat-dark-: #25252525;
   --chat-light-: #e9e5e5;
 
-  --base-card-dark-bg-: #303030;
+  --base-card-dark-bg-: #1c263b;
   --base-card-light-bg-: #f8f8f8;
 }
