--- a/assets/scss/background.scss
+++ b/assets/scss/background.scss
@@ -67,7 +67,7 @@
   color: var(--dark-);
 }
 .bg-gray-3 {
-  background: var(--gray3-);
+  background: var(--secondary1-);
   color: var(--dark-);
 }
 
