--- a/assets/scss/theme_colors.scss
+++ b/assets/scss/theme_colors.scss
@@ -40,4 +40,7 @@
 
   --base-card-dark-bg-: #1c263b;
   --base-card-light-bg-: #f8f8f8;
+
+  --base-drop-menu-dark-bg-: #131720;
+  --base-drop-menu-light-bg-: #fff;
 }
