--- a/assets/scss/background.scss
+++ b/assets/scss/background.scss
@@ -143,3 +143,9 @@
   color: var(--dark-);
 }
 // ** Application base drop menu theme class ** //
+
+// ** sidebar background ** //
+.sidebar-header-bg {
+  background-color: var(--sidebar-header-bg-);
+  color: #fff;
+}
