--- a/assets/scss/theme_colors.scss
+++ b/assets/scss/theme_colors.scss
@@ -32,17 +32,17 @@
 
   --white-: #fff;
 
-  --dark-bg-: #1A2130;
+  --dark-bg-: #13171f;
   --light-bg-: #FAF6F0;
 
   --chat-dark-: #25252525;
   --chat-light-: #e9e5e5;
 
-  --base-card-dark-bg-: #1c263b;
+  --base-card-dark-bg-: #161c29;
   --base-card-light-bg-: #f8f8f8;
 
   --base-drop-menu-dark-bg-: #131720;
   --base-drop-menu-light-bg-: #fff;
 
-  --sidebar-header-bg-: #213448;
+  --sidebar-header-bg-: #161c29;
 }
